# vibe-coding-manage

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
memory/: project.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/mobile/: index.html
src-tauri/src/: applog.rs  lib.rs  main.rs  remote.rs  usage.rs
