[package]
name = "vibe-coding-manage"
version = "1.2.2"
description = "Vibe Coding Project Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "vibe_coding_manage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
rust_xlsxwriter = "0.68"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
opener = "0.7"
portable-pty = "0.8"
base64 = "0.22"
trash = "5"
