[package]
name = "vibe-coding-manage"
version = "1.2.3"
description = "Vibe Coding Project Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "vibe_coding_manage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
rust_xlsxwriter = "0.68"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
opener = "0.7"
portable-pty = "0.8"
base64 = "0.22"
trash = "5"
# 内嵌远程服务（手机端局域网控制终端）
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
local-ip-address = "0.6"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }  # 仅 SVG，不拉 image 依赖
